# challenge-leaderboard

./: .gitignore  DEPLOYMENT.md  README.md  deadline_exceptions.yml  pyproject.toml  teams.yml
.github/: actionlint.yaml
.github/workflows/: auto-merge.yml  build-and-deploy.yml  ci.yml  score-daily.yml  validate-pr.yml
data/: actual_load.parquet  scores.parquet
joker/a_team/: 2026-06-28.csv
joker/ddkast/: 2026-06-01.csv
joker/neura/: 2026-07-03.csv
joker/syntaxerror/: 2026-06-29.csv
joker/team_fabinalii/: 2026-06-22.csv
joker/voltrion/: 2026-07-12.csv
modelcard/neura/: MODEL_CARD_NEURA.md
modelcard/voltrion/: MODEL_CARD_VOLTRION.md
modelcard/weather_report/: MODEL_CARD_TEAM_WEATHER_REPORT Kopie.md
repro/macl2l/: MANIFEST.md  README.md  before_after_macl2l.csv  before_after_macl2l_entsoe.csv
repro/team4/: .gitignore  build_zip.sh  team4_submit.py
scripts/: apply_joker.py  build_leaderboard.py  charts.py  generate_certificates.py  make_commit.py  make_submission.py  revise_scores.py  score_day.py  validate_submission.py
src/challenge_leaderboard/: __init__.py  joker.py  push.py  submission.py  teams.py  validation.py
submissions/a_team/: 2026-06-01.csv  2026-06-05.csv  2026-06-08.csv  2026-06-16.csv  2026-06-17.csv  2026-06-18.csv  2026-06-19.csv  2026-06-20.csv  2026-06-21.csv  2026-06-22.csv  (+28 more)
templates/: Certificate.md  leaderboard.html.j2
tests/: conftest.py  test_build_leaderboard.py  test_charts.py  test_joker.py  test_revise_scores.py  test_score_day.py  test_utc_pipeline.py  test_validate_submission.py  test_workflows_yaml.py
(+731 files in other folders)
